--- a/ignite/resources/apache-ignite.xml.tmpl
+++ b/ignite/resources/apache-ignite.xml.tmpl
@@ -33,6 +33,8 @@
         <property name="clientMode" value="##clientmode##"/>
         <property name="igniteInstanceName" value="##instancename##"/>
 
+        <property name="failureDetectionTimeout" value="5000"/>
+
         <!-- Set to true to enable distributed class loading for examples, default is false. -->
         <property name="peerClassLoadingEnabled" value="true"/>
 
